# 4lock-core

./: .cursorrules  .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile.dev  Makefile  README.md
.cursor/: README.md
.cursor/docs/: 00-overview.md  01-crate-architecture.md  05-development-guide.md  06-blob-502-troubleshooting.md  README.md
.cursor/rules/: 00-context-inclusion.mdc  00-os-specific-rules.mdc  01-core-project.mdc  02-rust-workspace.mdc  04-cursor-workflow.mdc  05-architecture-usage.mdc
daemon/: Cargo.toml  Dockerfile.dev  README.md
daemon/src/: lib.rs
daemon/src/blob/: Cargo.toml
daemon/src/blob/examples/: custom_config.rs
daemon/src/blob/src/: prepull.rs
daemon/src/blob/src/registry/: mirror_racer.rs  mod.rs  upstream.rs
daemon/src/blob/tests/: cache_storage_test.rs
daemon/src/container/src/bootstrap/: mod.rs  template_renderer.rs
daemon/src/container/src/bootstrap/tasks/: container_task.rs  mod.rs
daemon/src/container/src/bootstrap/templates/certs/: 20-api-certificates.sh
daemon/src/container/src/bootstrap/templates/kubeconfig/: admin.external.kubeconfig.j2  admin.kubeconfig.j2
daemon/src/container/src/rootless/: error.rs  mod.rs  system_check.rs
daemon/src/vappc/: Cargo.toml
daemon/src/vappc/src/: daemon.rs
docker/dockerfiles/: Dockerfile.core  Dockerfile.core.test
docker/entrypoints/: docker-entrypoint-core-test.sh  docker-entrypoint-core.sh
docs/: NAMING.md  README.md
docs/architecture/: CRATE_ARCHITECTURE.md  OVERVIEW.md
docs/development/: DEVELOPMENT_GUIDE.md
docs/troubleshooting/: BLOB_502_TROUBLESHOOTING.md  ZEROTIER_FIX_SUMMARY.md  ZEROTIER_VM_CRASH_ROOT_CAUSE.md
packaging/: README-vapp-core-systemd.md  README-vappc-systemd.md
packaging/systemd/: vapp-core-daemon.service  vappc-linux-daemon.service
publish/: Cargo.toml  README.md  build.rs
publish/src/: lib.rs
src/: lib.rs
src/blob/: README.md  build.rs
src/blob/examples/: README.md  basic_server.rs  https_server.rs
src/blob/src/: config.rs  dns.rs  error.rs  lib.rs  prepull.rs  server.rs
src/blob/src/cache/: metadata.rs  mod.rs  storage.rs
src/blob/src/certs/: mod.rs
src/blob/src/helm/: chart.rs  index.rs  mod.rs
src/blob/src/registry/: blob.rs  manifest.rs  mirror_racer.rs  upstream.rs  v2_api.rs
src/blob/src/tls/: mod.rs  server.rs
src/blob/tests/: README.md  blob_resume_test.rs  blob_streaming_test.rs  cache_miss_test.rs  config_test.rs  ghcr_oci_index_test.rs  integration_test.rs  manifest_test.rs  mirror_racer_test.rs  per_mirror_auth_test.rs
src/container/: Cargo.toml  build.rs
src/container/proto/cri/: api.proto
src/container/src/: app_runtime.rs  app_spec.rs  intent.rs  lib.rs  progress.rs  provisioner.rs
src/container/src/bootstrap/: config.rs  embedded_templates.rs  image_manager.rs  intent_loop.rs  k8s_components.rs  mod.rs  provisioner.rs  template_renderer.rs  utility_runner.rs  volume_manager.rs  workflow.rs
src/container/src/bootstrap/tasks/: container_task.rs  exec_task.rs  kubectl_task.rs  mod.rs
src/container/src/bootstrap/templates/app/: coredns-corefile.j2
src/container/src/bootstrap/templates/certs/: 10-ca-certificate.sh
src/container/src/bootstrap/templates/containerd/: config.toml.j2
src/container/src/bootstrap/templates/kubeconfig/: controller.kubeconfig.j2  scheduler.kubeconfig.j2
src/container/src/bootstrap/templates/kubelet/: kubelet-config.yaml.j2  kubelet.kubeconfig.j2
src/container/src/bootstrap/templates/manifests/: cilium.yaml.j2  coredns.yaml.j2  rbac-node.yaml.j2  runtime-class.yaml.j2
src/container/src/bootstrap/workflows/: infra.rs  mod.rs  ops.rs
src/container/src/common/: image.rs  mod.rs  types.rs  volume.rs
src/container/src/cri/: container_registry.rs  image_service.rs  mod.rs  runtime_service.rs  sandbox.rs  server.rs
src/container/src/rootless/: bundle.rs  commands.rs  config.rs  lifecycle.rs  mod.rs  orchestration.rs  runtime.rs  shared_netns.rs  system_check.rs
src/container/tests/: image_manager_resume_test.rs  k8s_components.rs  network_connectivity_test.rs  system_check.rs
src/vapp_core/: Cargo.toml
src/vapp_core/src/: client.rs  daemon.rs  lib.rs
src/vapp_core/tests/: connect_vappc_unix.rs  connect_vappc_vsock.rs  public_api.rs
src/vappc/: build.rs
src/vappc/src/: client.rs  daemon.rs  lib.rs  protocol.rs
src/vappc/tests/: connect_vappc_unix.rs  connect_vappc_vsock.rs
src/vappcore/: Cargo.toml
src/vappcore/src/: client.rs  daemon.rs  lib.rs  protocol.rs
src/vappcore/tests/: connect_vappc_unix.rs  connect_vappc_vsock.rs  ndjson_integration.rs  public_api.rs  wire_protocol.rs
