# Root workspace: daemon (package owning blob, container, vappc) and publish only.
# Build: cargo build -p daemon or cargo build -p publish
[workspace]
resolver = "2"
members = ["daemon", "publish"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
overflow-checks = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev-fast]
inherits = "dev"
opt-level = 1
debug = 1
incremental = true
codegen-units = 16
lto = false
strip = "none"

[patch.crates-io]
libcgroups = { git = "https://github.com/youki-dev/youki.git", rev = "bd54457ba9de1629f21fe678687f433aec63e7c7", package = "libcgroups", features = [] }
h2 = { git = "https://github.com/saschagrunert/h2.git", branch = "authority" }
