# Daemon package: root "daemon" depends on blob, container, vappcore (all necessary info here).
# Build from repo root: cargo build -p daemon
# Build from daemon dir: cargo build --manifest-path daemon/Cargo.toml (profiles/patch below apply)
# Cross: daemon/Cross.toml (used by publish when building Linux binaries)

[package]
name = "daemon"
version = "0.1.0"
edition = "2021"
description = "4lock-core daemon workspace root (container, vappcore)"

[lib]
path = "src/lib.rs"

[dependencies]
container = { path = "src/container" }
vappcore = { path = "src/vappcore" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
overflow-checks = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev-fast]
inherits = "dev"
opt-level = 1
debug = 1
incremental = true
codegen-units = 16
lto = false
strip = "none"

[patch.crates-io]
libcgroups = { git = "https://github.com/youki-dev/youki.git", rev = "bd54457ba9de1629f21fe678687f433aec63e7c7", package = "libcgroups", features = [] }
h2 = { git = "https://github.com/saschagrunert/h2.git", branch = "authority" }
