# Daemon package: root "daemon" depends on blob, container, vappcore.
# Build from repo root: cargo build -p daemon
# Cross: daemon/Cross.toml (used by publish when building Linux binaries)
# NOTE: profiles and [patch] are defined in the workspace root Cargo.toml

[package]
name = "daemon"
version = "0.1.0"
edition = "2021"
description = "4lock-core daemon workspace root (container, vappcore)"

[lib]
path = "src/lib.rs"

[dependencies]
container = { path = "src/container" }
vappcore = { path = "src/vappcore" }
