[package]
name = "vappcore"
version = "0.1.0"
edition = "2021"
description = "vapp-core: daemon and client for 4lock-core. No dependency on 4lock-agent."

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = "0.3"
notify = "6"  # Uses inotify on Linux for binary hot-reload

# Single daemon binary (source: vappc.rs; output: vapp-core-daemon).
# Guest expects: /mnt/vapp/vapp-core-daemon --socket vsock:49163
# With vsock:PORT the daemon also listens on TCP 127.0.0.1:PORT for SSH port-forward (hosts without VSOCK, e.g. Windows).
[[bin]]
name = "vapp-core-daemon"
path = "src/bin/vappc.rs"

[dependencies]
container = { path = "../container" }

clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "io-util"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
